--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,11 +15,12 @@ jobs:
                     - '7.3'
                     - '7.4'
                     - '8.0'
+                    - '8.1'
                 coverage: ['none']
                 include:
                     - description: 'Log Code Coverage'
-                      php: '8.0'
-                      coverage: 'xdebug'
+                      php: '8.1'
+                      coverage: 'pcov'
 
         name: PHP ${{ matrix.php }} ${{ matrix.description }}
         steps:
@@ -46,11 +47,11 @@ jobs:
 
             - name: PHPUnit tests and Log Code coverage
               run: vendor/bin/phpunit --exclude-group proxy --coverage-clover=coverage.xml
-              if: matrix.coverage == 'xdebug'
+              if: matrix.coverage == 'pcov'
 
             - name: Run codecov
               uses: codecov/codecov-action@v1
-              if: matrix.coverage == 'xdebug'
+              if: matrix.coverage == 'pcov'
               with:
                   file: './coverage.xml'
                   fail_ci_if_error: true
